Agent statistic Rest API
